# safechain-internals

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  justfile  safechain-agent.rb  safechain-proxy-ca.pem
netbench/: Cargo.toml
netbench/src/: main.rs
netbench/src/cmd/: mod.rs
netbench/src/cmd/mock/: mod.rs
netbench/src/cmd/run/: mod.rs
netbench/src/config/: product.rs  scenario.rs
proxy/: Cargo.toml  README.md  build.rs
proxy-bin-l4/: Cargo.toml
proxy-bin-l4-macos/: Cargo.toml
proxy-bin-l4-macos/src/: config.rs  lib.rs  tcp.rs
proxy-bin-l4-macos/src/http/: hijack.rs  hijack_index.html  mod.rs
proxy-bin-l4-macos/src/tls/: mitm_relay_policy.rs
proxy-bin-l4-macos/src/utils/: env.rs  mod.rs
proxy-bin-l4-windows-driver-object/: Cargo.toml
proxy-bin-l4-windows-driver-object/src/: common.rs  lib.rs  lib_windows.rs  main.rs  main_other.rs  main_windows.rs  runtime_config.rs  telemetry.rs  wfp.rs
proxy-bin-l4-windows-driver-object/src/cmd/: disable.rs  enable.rs  mod.rs  seed_startup_config.rs  start.rs  stop.rs  update.rs
proxy-bin-l4/src/: main.rs
proxy-bin-l4/src/platform/: mod.rs
proxy-bin-l4/src/platform/linux/: mod.rs
proxy-bin-l4/src/platform/macos/: mod.rs
proxy-bin-l4/src/platform/windows/: mod.rs
proxy-bin-l4/src/tcp/: mod.rs  proxy_target.rs  windows.rs
proxy-bin-l4/src/tcp/proxy_target/: deny.rs  mod.rs  windows.rs
proxy-bin-l7/: Cargo.toml
proxy-bin-l7/src/: main.rs
proxy-bin-l7/src/client/: mod.rs
proxy-bin-l7/src/client/mock_client/: assert_endpoint.rs  chrome_webstore.rs  endpoint_protection_callbacks.rs  malware_list.rs  mod.rs  vscode_marketplace.rs
proxy-bin-l7/src/client/mock_server/: assert_endpoint.rs  endpoint_protection_callbacks.rs  malware_list.rs  mod.rs  npm_registry.rs  open_vsx_gallery.rs  packagist_registry.rs  pypi_registry.rs  vscode_marketplace.rs
proxy-bin-l7/src/server/: mod.rs
proxy-bin-l7/src/server/meta/: mod.rs
proxy-bin-l7/src/server/proxy/: client.rs  forwarder.rs  mod.rs  server.rs
proxy-bin-l7/src/test/: tmp_dir.rs
proxy-bin-l7/src/test/e2e/: mod.rs  runtime.rs  test_connectivity.rs  test_hijack.rs
proxy-bin-l7/src/utils/: mod.rs
proxy-fuzz/: Cargo.toml  parse_pragmatic_semver_version.rs
proxy-lib/: Cargo.toml
proxy-lib-l4-macos/: Cargo.toml
proxy-lib-l4-macos/src/: config.rs  config_tests.rs  handler.rs  init.rs  lib.rs  lib_tests.rs  state.rs  tcp.rs  tls.rs  xpc_server.rs  xpc_server_tests.rs
proxy-lib-l4-macos/src/remote_app_passthrough_list/: mod.rs
proxy-lib-l4-macos/src/utils/: env.rs  mod.rs  storage.rs
proxy-lib-l4-windows-driver/: Cargo.toml  build.rs  justfile  safechain_lib_l4_proxy_windows_driver.inx
proxy-lib-l4-windows-driver/.cargo/: config.toml
proxy-lib-l4-windows-driver/src/: control.rs  device.rs  driver.rs  driver_tests.rs  lib.rs  log.rs  process_monitor.rs  wfp.rs  wfp_tests.rs
proxy-lib-l4-windows-driver/src/control/: ioctl.rs  ioctl_tests.rs  mod.rs  startup_config.rs  startup_config_tests.rs
proxy-lib-l4-windows-driver/src/wfp/: classify.rs  ffi.rs  ffi_tests.rs  metadata.rs  mod.rs  sockaddr.rs
proxy-lib-nostd/: Cargo.toml
proxy-lib-nostd/src/: lib.rs
proxy-lib-nostd/src/net/: ip.rs  ip_tests.rs  mod.rs
proxy-lib-nostd/src/windows/: browser.rs  browser_tests.rs  driver_protocol.rs  mod.rs  unicode.rs
proxy-lib-windows-core/: Cargo.toml
proxy-lib-windows-core/src/: driver_protocol.rs  lib.rs  redirect_ctx.rs
proxy-lib/src/: lib.rs
proxy-lib/src/client/: mod.rs  web_client.rs
proxy-lib/src/diagnostics/: har.rs  mod.rs
proxy-lib/src/endpoint_protection/: config.rs  mod.rs  policy.rs  policy_tests.rs  remote_app_passthrough_list.rs  tests.rs  types.rs
proxy-lib/src/endpoint_protection/remote_app_passthrough_list/: mod.rs  tests.rs
proxy-lib/src/http/: client.rs  content_type.rs  headers.rs  lol_html_body.rs  lol_html_body_tests.rs  mod.rs  req_info.rs  req_info_tests.rs  response.rs  ws_relay.rs
proxy-lib/src/http/firewall/: events.rs  events_tests.rs  layer.rs  matched_rules.rs  matched_rules_tests.rs  mod.rs  notifier.rs  pac.rs
proxy-lib/src/http/service/: connectivity.rs  hijack.rs  hijack_index.html  mod.rs
proxy-lib/src/package/: malware_list.rs  malware_list_tests.rs  mod.rs  released_packages_list.rs  released_packages_list_tests.rs
proxy-lib/src/package/name_formatter/: glob_set.rs  glob_set_tests.rs  lower_case.rs  mod.rs
proxy-lib/src/package/version/: pragmatic_semver.rs  tests.rs
proxy-lib/src/storage/: app_path.rs  data.rs  mod.rs  secrets.rs
proxy-lib/src/tcp/: concurrency_limit.rs  connector.rs  mod.rs
proxy-lib/src/tls/: intermediate.rs  mitm_relay_policy.rs  mod.rs  root.rs
proxy-lib/src/tls/root/: ca.rs  ca_test.rs  mod.rs
proxy-lib/src/utils/: env.rs  mod.rs  net.rs  remote_resource.rs  telemetry.rs  time.rs  time_tests.rs  token.rs  uri.rs  uri_tests.rs
proxy-lib/src/utils/io/: mod.rs
proxy/src/: cli.rs  lib.rs  main.rs
proxy/src/client/: mod.rs  transport.rs
proxy/src/diagnostics/: har.rs
proxy/src/firewall/: chrome.rs  domain_matcher.rs  events.rs  events_tests.rs  make_response.rs  malware_list.rs  mod.rs  notifier.rs  pac.rs  utils.rs  vscode.rs
proxy/src/http/: content_type.rs  filename.rs  headers.rs  mod.rs  response.rs
proxy/src/server/: mod.rs
proxy/src/storage/: data.rs  mod.rs  secrets.rs
proxy/src/test/: mod.rs
proxy/src/tls/: mod.rs  root.rs
proxy/src/utils/: env.rs  mod.rs  telemetry.rs  test.rs
proxy_cli/: Cargo.toml
proxy_cli/src/: main.rs
proxy_fuzz/: Cargo.toml  parse_pragmatic_semver_version.rs
proxy_netbench/: Cargo.toml  run.py
proxy_netbench/har_files/: mini_toy.har.json  synthetic.har.json
proxy_netbench/scripts/: build_report.py  download_baselines.py  post_pr_comment.py
proxy_netbench/src/: definitions.rs  main.rs
proxy_netbench/src/cmd/: mod.rs
proxy_netbench/src/config/: client.rs  mod.rs  product.rs  scenario.rs  server.rs
proxy_netbench/src/http/: har.rs  malware.rs  mod.rs
proxy_netbench/src/mock/: mod.rs  pypi.rs  random.rs  vscode.rs
proxy_netbench/src/utils/: telemetry.rs
(+640 files in other folders)
