[workspace]
members = [
    "proxy-bin-l4",
    "proxy-bin-l7",
    "proxy-fuzz",
    "proxy-lib",
    "proxy-lib-l4-macos",
]
resolver = "3"

[workspace.package]
version = "1.0.0"  # keep in sync with GH releases
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
apple-native-keyring-store = "0.2"
arc-swap = "1.7"
clap = { version = "4.5" }
core-foundation = "0.10"
humantime = "2.3"
jemallocator = { package = "tikv-jemallocator", version = "0.6" }
keyring-core = "0.7"
libc = "0.2"
libfuzzer-sys = "0.4"
linux-keyutils-keyring-store = "0.2"
lz4_flex = "0.13"
mimalloc = { version = "0.1", default-features = false }
moka = "0.12"
parking_lot = "0.12.5"
postcard = { version = "1.1", default-features = false }
radix_trie = "0.3"
rand = "0.10"
rustls-platform-verifier = "0.6"
safechain-proxy-lib = { path = "./proxy-lib" }
secrecy = "0.10"
security-framework = "3.6"
security-framework-sys = "2.14"
serde = "1.0"
serde_html_form = "0.4"
serde_json = "1"
serde_test = "1"
static_vcruntime = "3.0"
sudo = "0.6"
tokio = { version = "1.48" }
tracing-oslog = "0.3"
tracing-test = "0.2"
windows-native-keyring-store = "0.5"

[workspace.dependencies.rama]
git = "https://github.com/plabayo/rama"
rev = "4e1041cc212ea5e4de27a64da4246b7ec731370b"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.release.package.safechain-proxy-fuzz]
strip = false
codegen-units = 16
