[package]
name = "netbench"
description = "Network Benchmark tool in function of safechain-proxy"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.91"
readme = "../docs/netbench.md"
resolver = "3"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
serde = "1.0"
serde_json = "1"
rand = "0.9"

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6" }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring"]
