[package]
name = "safechain-l4-proxy-macos"
description = "Aikido SafeChain MITM MacOS l4 Proxy"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[lib]
crate-type = ["staticlib"]

[features]
har = ["safechain-proxy-lib/har"]

[dependencies]
tokio = { version = "1.48", features = ["net", "io-std"] }
safechain-proxy-lib = { workspace = true, features = ["pac"] }
jemallocator = { workspace = true }
tracing-oslog = { workspace = true }
moka = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustls-platform-verifier = { workspace = true }

[dependencies.rama]
workspace = true
features = ["net-apple-networkextension", "tcp", "udp", "dns", "socks5", "ws", "http-full", "boring", "rustls"]
