[package]
name = "safechain-l4-proxy"
description = "Aikido SafeChain MITM l4 Proxy"
version = { workspace = true }  # keep in sync with GH releases
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[features]
har = ["safechain-proxy-lib/har"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
safechain-proxy-lib = { workspace = true, features = ["pac"] }

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring", "rustls"]

[dev-dependencies.safechain-proxy-lib]
workspace = true
features = ["test-utils"]

[dev-dependencies.rama]
workspace = true
features = ["cli"]
