[package]
name = "safechain-l4-proxy"
description = "Aikido SafeChain MITM l4 Proxy"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[features]

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true }
postcard = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Networking_WinSock"] }

[dependencies]
clap = { workspace = true, features = ["derive"] }
safechain-proxy-lib = { workspace = true, features = ["pac"] }
safechain-proxy-lib-windows-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring", "rustls", "aws-lc"]

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies.rama]
workspace = true
features = ["cli"]

[dev-dependencies.safechain-proxy-lib]
workspace = true
features = ["test-utils"]
