[package]
name = "safechain-l7-proxy"
description = "MITM SafeChain HTTP(S)/SOCKS5 l7 Proxy for Developer Security"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[features]
har = ["safechain-proxy-lib/har"]

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
safechain-proxy-lib = { workspace = true, features = ["pac"] }
tokio = { workspace = true, features = ["full"] }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring", "rustls", "aws-lc"]

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tracing-test = { workspace = true }

[dev-dependencies.rama]
workspace = true
features = ["cli"]

[dev-dependencies.safechain-proxy-lib]
workspace = true
features = ["test-utils"]
