[package]
name = "safechain-proxy-fuzz"
description = "fuzzing modules for safechain-proxy utils"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
safechain-proxy-lib = { workspace = true }

[[bin]]
name = "parse_pragmatic_semver_version"
path = "parse_pragmatic_semver_version.rs"
test = false
doc = false
