[package]
name = "safechain-proxy-lib-windows-core"
description = "SafeChain Core Windows Proxy Lib"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[features]

[dependencies]
serde = { workspace = true, features = ["derive", "alloc"] }
