[package]
name = "safechain-proxy-lib"
description = "SafeChain Common Proxy Lib"
version = { workspace = true }
edition = { workspace = true }
publish = false
rust-version = { workspace = true }
readme = "../docs/proxy.md"

[features]
har = []
pac = []
test-utils = []
apple-networkextension = []

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, features = ["keychain", "protected"] }
sudo = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
humantime = { workspace = true }
keyring-core = { workspace = true }
lz4_flex = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
radix_trie = { workspace = true }
rand = { workspace = true }
rustls-platform-verifier = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring", "rustls", "aws-lc"]

[dev-dependencies]
tracing-test = { workspace = true }

[dev-dependencies.rama]
workspace = true
features = ["cli"]
