[package]
name = "safechain-proxy-lib"
description = "Core library for safechain-proxy (cli)"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false
readme = "../docs/proxy.md"
resolver = "3"

[features]
har = []
bench = []

[dependencies]
arc-swap = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
keyring-core = { workspace = true }
humantime = { workspace = true }
secrecy = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
lz4_flex = { workspace = true }
serde_test = { workspace = true }
radix_trie = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
serde_html_form = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, features = ["keychain"] }
sudo = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring"]

[dev-dependencies]
tracing-test = "0.2"

[dev-dependencies.rama]
workspace = true
features = ["cli"]
