[package]
name = "safechain-proxy"
description = "MITM SafeChain HTTP(S)/SOCKS5 Proxy for Developer Security"
version = "1.0.0"  # keep in sync with GH releases
edition = "2024"
publish = false
rust-version = "1.93"
readme = "../docs/proxy.md"
resolver = "3"

[features]
har = []

[dependencies]
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
keyring-core = "0.7"
humantime = "2.3"
secrecy = "0.10"
tokio = { version = "1.48", features = ["full"] }
serde = "1.0"
postcard = { version = "1.1", features = ["alloc"] }
lz4_flex = "0.12"
serde_test = "1"
radix_trie = "0.3"
serde_json = "1"
moka = "0.12"
rand = "0.9"
parking_lot = "0.12.5"
serde_html_form = "0.4"
rustls-platform-verifier = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"] }
sudo = "0.6"

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6" }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = "3.0"

[dependencies.rama]
workspace = true
features = ["http-full", "proxy-full", "dns", "boring", "rustls"]

[dev-dependencies]
tracing-test = "0.2"

[dev-dependencies.rama]
workspace = true
features = ["cli"]
